test/negative/NewArrayAccess.java
public class NewArrayAccess {
    public NewArrayAccess() {}
    public void x() {
        int y = new int[100][2];
    }
}
